<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FamiryBoard</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_drawer">@string/app_name</string>
    <string name="title_activity_splash">@string/app_name</string>
    <string name="title_activity_select_cake">ボードを選ぶ</string>
    <string name="title_activity_make_cake"></string>
    <string name="title_activity_confilm"></string>
    <string name="title_activity_select_stamp_category">スタンプを選択</string>
    <string name="title_activity_select_stamp">スタンプを選択</string>
    <string name="title_activity_webpage"></string>
    <string name="title_activity_login">ログイン</string>
    <string name="title_activity_regist">新規登録</string>

    <!-- Start -->
    <string name="start_button_login">招待されている人</string>
    <string name="start_button_regist">新規で登録</string>
    <!-- Login -->
    <string name="login_edittext_hint_mail">ユーザーネーム</string>
    <string name="login_edittext_hint_password">パスワード</string>
    <string name="login_button_login">ログイン</string>
    <!-- Regist -->
    <string name="regist_edittext_hint_name">お名前</string>
    <string name="regist_edittext_hint_mail">メールアドレス</string>
    <string name="regist_edittext_hint_password">パスワード</string>
    <string name="regist_edittext_hint_password_confilm">パスワードの確認</string>
    <string name="regist_edittext_hint_birthday">誕生日</string>
    <string name="regist_button_signup">登録する</string>
    <!-- Top -->
    <string name="top_button_make">ボード一覧</string>
    <string name="top_button_collection">コレクションを選ぶ</string>
    <string name="top_text_date">最短お届け日　%1$s</string>
    <!-- Select Cake -->
    <string name="cake_label_plain">Plain</string>
    <string name="cake_label_choco">Chocolate</string>
    <string name="cake_size">%1$dcm×%2$dcm</string>
    <string name="cake_target">%1$s名様用</string>
    <string name="cake_price">%1$s円</string>
    <!-- Make Cake -->
    <string name="make_nav_quality">画像品質</string>
    <string name="make_getpic_camera">撮影する</string>
    <string name="make_getpic_gallery">カメラロール</string>
    <string name="make_attention_title">ボードに何も描かれていません</string>
    <string name="make_attention_message">ボードの上に写真、スタンプ、テキスト\nなどを配置して装飾してみてください。</string>
    <!-- Confilm -->
    <string name="confilm_button_cart">カートに入れる</string>
    <string name="confilm_textview_price">¥%1$s\n+送料</string>
    <!-- Navigation Drawer -->
    <string name="nav_drawer_info">最短お届け日</string>
    <string name="nav_menu_home">ホーム</string>
    <string name="nav_menu_cart">カート</string>
    <string name="nav_menu_mail">お問い合わせ</string>
    <string name="nav_menu_calendar">カレンダー</string>s
    <string name="nav_menu_album">アルバム</string>
    <string name="nav_menu_user">マイページ</string>
    <string name="nav_menu_question">ご利用方法</string>
    <string name="failed_network_text">通信に失敗しました。再度お試しください</string>
    <string name="faild_stamp_get">スタンプの取得に失敗しました。</string>
    <!-- TextDeco Dialog -->
    <string name="textdeco_edittext_hint">タップで文章編集</string>
    <string name="textdeco_buttton_positive">OK</string>
    <string name="textdeco_buttton_negative">キャンセル</string>
    <!-- Font(Text Deco) View -->
    <string name="font_textview_size">%1$dpt</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_album">AlbumActivity</string>


</resources>
