<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:src="@drawable/img_top_up"
        android:scaleType="fitStart"
        android:adjustViewBounds="true"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:src="@drawable/img_top_down"
        android:scaleType="fitEnd"
        android:adjustViewBounds="true"/>

    <com.andexert.library.RippleView
        android:id="@+id/top_rippleview_collect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        ripple:rv_type="rectangle"
        ripple:rv_zoom="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/top_textview_collection"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_large"
            android:textColor="@color/primary_text"
            android:gravity="center"
            android:text="@string/top_button_collection"
            android:background="@color/accent"
            android:textSize="@dimen/text_size_xlarge" />

    </com.andexert.library.RippleView>

    <com.andexert.library.RippleView
        android:id="@+id/top_rippleview_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        ripple:rv_type="rectangle"
        ripple:rv_zoom="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/top_rippleview_collect">

        <TextView
            android:id="@+id/top_textview_make"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_large"
            android:textColor="@color/primary_text"
            android:gravity="center"
            android:text="@string/top_button_make"
            android:background="@color/accent_orange"
            android:textSize="@dimen/text_size_xlarge" />

    </com.andexert.library.RippleView>

    <TextView
        android:id="@+id/top_textView_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/top_cake_vertical_margin"
        android:text="@string/top_text_date"
        android:layout_above="@+id/top_rippleview_make"
        android:textStyle="bold"
        android:textColor="@color/secondary_text"
        android:layout_centerHorizontal="true"/>

    <FrameLayout
        android:id="@+id/top_layout_cake"
        android:layout_width="@dimen/top_imageview_cake_size"
        android:layout_height="@dimen/top_imageview_cake_size"
        android:layout_above="@+id/top_textView_nav"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/top_cake_vertical_margin">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/top_imageview_cake_padding"
            android:layout_gravity="center"
            android:background="@android:color/black"/>

        <ImageView
            android:id="@+id/top_imageview_gallery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/top_imageview_cake_padding"
            android:layout_gravity="center"
            android:src="@drawable/img_top_gallery"
            android:background="@android:color/white"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/top_imageview_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/img_cake_frame"
            android:layout_gravity="center" />

    </FrameLayout>

</RelativeLayout>